--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ngx-perfect-scrollbar",
+  "name": "ngx-not-perfect-scrollbar",
   "description": "Angular wrapper library for Perfect Scrollbar",
-  "bugs": "https://github.com/zefoy/ngx-perfect-scrollbar/issues",
+  "bugs": "https://github.com/ms-dosx86/ngx-perfect-scrollbar/issues",
   "license": "MIT",
-  "version": "7.2.1",
+  "version": "1.0.0",
   "main": "./bundles/ngx-perfect-scrollbar.umd.js",
   "module": "./dist/ngx-perfect-scrollbar.es5.js",
   "typings": "./dist/ngx-perfect-scrollbar.d.ts",
@@ -32,10 +32,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/zefoy/ngx-perfect-scrollbar.git"
+    "url": "https://github.com/ms-dosx86/ngx-perfect-scrollbar"
   },
   "dependencies": {
-    "perfect-scrollbar": "^1.4.0",
+    "not-perfect-scrollbar": "^1.0.0",
     "resize-observer-polyfill": "^1.5.0"
   },
   "devDependencies": {
