--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngx-perfect-scrollbar-example",
-  "description": "Example app for the ngx-perfect-scrollbar",
+  "name": "ngx-not-perfect-scrollbar-example",
+  "description": "Example app for the ngx-not-perfect-scrollbar",
   "private": true,
   "license": "MIT",
   "version": "7.0.0",
@@ -25,7 +25,7 @@
   },
   "config": {
     "deployToGit": {
-      "repository": "git@github.com:zefoy/ngx-perfect-scrollbar.git",
+      "repository": "git@github.com:zefoy/ngx-not-perfect-scrollbar.git",
       "branch": "gh-pages",
       "folder": "dist",
       "script": "npm run build",
@@ -45,7 +45,7 @@
     "@angular/platform-browser": "^7.2.0",
     "@angular/platform-browser-dynamic": "^7.2.0",
     "core-js": "^2.6.0",
-    "ngx-not-perfect-scrollbar": "^1.0.1",
+    "ngx-not-perfect-scrollbar": "^1.0.2",
     "resize-observer-polyfill": "^1.5.0",
     "rxjs": "^6.3.0",
     "zone.js": "^0.8.0"
